--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,5 +1,5 @@
 <p>
-    Find a length the longest substring that repeats more than once.
+    Find a length the longest substring that non-overlapping repeats more than once.
 </p>
 
 
