--- a/info/task_short_description.html
+++ b/info/task_short_description.html
@@ -1,1 +1,1 @@
-Find a length the longest substring that repeats more than once in the
+Find the length of the longest substring that repeats more than once.
