--- a/info/task_description.html
+++ b/info/task_description.html
@@ -12,7 +12,9 @@
     <strong>Output: </strong> Int. 
 </p>
 
-
+<p style="text-align: center;">
+    <img  title="Double substring" src="{{MEDIA}}double_substring.svg.png" alt="example" style="max-height: 80px">
+</p>
 
 <div class="for_info_only">
     <p>
