--- a/translations/ru/info/task_description.html
+++ b/translations/ru/info/task_description.html
@@ -15,7 +15,9 @@
 </p>
 
 
-
+<p style="text-align: center;">
+    <img  title="Double substring" src="{{MEDIA}}double_substring.svg.png" alt="example" style="max-height: 80px">
+</p>
 
 <div class="for_info_only">
     <p>
