--- a/info/task_description.html
+++ b/info/task_description.html
@@ -13,21 +13,13 @@
 </p>
 
 <p style="text-align: center;">
-    <img  title="Double substring" src="{{MEDIA}}double_substring.svg.png" alt="example" style="max-height: 80px">
+    <img  title="example" src="{{MEDIA}}example.png" alt="example" style="max-height: 200px">
 </p>
 
 <div class="for_info_only">
     <p>
         <strong>Example:</strong>
     </p>
-<pre class="brush: python">{% if interpreter.slug == "js-node" %}
-doubleSubstring('aaaa') == 2
-doubleSubstring('abc') == 0
-doubleSubstring('aghtfghkofgh') == 3 # fgh
-{% else %}
-double_substring('aaaa') == 2
-double_substring('abc') == 0
-double_substring('aghtfghkofgh') == 3 # fgh
-{% endif %}</pre>
+<pre class="brush: {% if is_js %}javascript{% else %}python{% endif %}">{{init_code_tmpl}}</pre>
 </div>
 
