--- a/translations/uk/info/task_description.html
+++ b/translations/uk/info/task_description.html
@@ -4,7 +4,7 @@
     місій, але вони будуть доступні з більшою кількістю відкритих островів на карті).</i></p>
 
 <p>
-    Це третя місія серії, і це єдина, де тобі потрібно повертати не підрядок, а довжину підрядка. Вам потрібно знайти
+    Це третя місія серії, і це єдина, де тобі потрібно повертати не підрядок, а довжину підрядка. Тобі потрібно знайти
     підрядок, який повторюється більше одного разу в даному рядку. Це повторення не повинно збігатися. Наприклад,
     у рядку "abcab" найдовшим підрядком, який повторюється більше одного разу, є "ab", тому відповідь має бути 2 (довжина "ab")
 </p>
