--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,15 +1,15 @@
-<p><i><a href="https://py.checkio.org/forum/post/11382/4-mission-ideas-substrings/">There are four substring missions</a> that were born all in one day and you shouldn’t be needed more than one day to solve them. All of those mission can be simply solved by brute force, but is it always the best way to go? (you might not have access to all of those missions yet, but they are going to be available with more opened islands on the map).</i></p>
+<p style="text-align: justify;"><i><a target="_blank" href="https://py.checkio.org/forum/post/11382/4-mission-ideas-substrings/">There are four substring missions</a> that were born all in one day and you shouldn’t be needed more than one day to solve them. All of those mission can be simply solved by brute force, but is it always the best way to go? (you might not have access to all of those missions yet, but they are going to be available with more opened islands on the map).</i></p>
 
-<p>
+<p style="text-align: justify;">
     This is the third mission of the series, and it’s the only one where you have to return not a substring but a substring length. You need to find a substring that repeats more than once in a given string. This reiteration shouldn't have overlaps. For example, in a string "abcab" the longest substring that repeats more than once is "ab", so the answer should be 2 (length of "ab")
 </p>
 
 
 <p>
-    <strong>Input: </strong> String.
+    <strong>Input:</strong> String <span translate="no">(str{% if is_js %}ing{% endif %})</span>.
 
 <p>
-    <strong>Output: </strong> Int. 
+    <strong>Output:</strong> Integer <span translate="no">({% if is_js %}number{% else %}int{% endif %})</span>. 
 </p>
 
 <p style="text-align: center;">
@@ -18,7 +18,7 @@
 
 <div class="for_info_only">
     <p>
-        <strong>Example:</strong>
+        <strong>Examples:</strong>
     </p>
 <pre class="brush: {% if is_js %}javascript{% else %}python{% endif %}">{{init_code_tmpl}}</pre>
 </div>
