UPDATE - Auto translation uk (v1)

--- a/translations/uk/info/task_description.html
+++ b/translations/uk/info/task_description.html
@@ -1,20 +1,15 @@
-<p><i><a href="https://py.checkio.org/forum/post/11382/4-mission-ideas-substrings/">Є чотири місії, які пов'язані з аналізом частин рядка,</a>
-    які створилися в один день, і тобі знадобиться не більше одного дня, щоб їх вирішити. Усі ці місії можна просто
-    вирішити за допомогою грубої сили, але чи завжди це найкращий спосіб? (Можливо, ти ще не маєш доступу до всіх цих
-    місій, але вони будуть доступні з більшою кількістю відкритих островів на карті).</i></p>
+<p style="text-align: justify;"><i><a target="_blank" href="https://py.checkio.org/forum/post/11382/4-mission-ideas-substrings/">There are four substring missions</a> які народилися за один день, і вам не повинно знадобитися більше одного дня, щоб їх вирішити. Всі ці місії можна вирішити просто грубою силою, але чи завжди це найкращий спосіб? (Можливо, ви ще не маєте доступу до всіх цих місій, але вони стануть доступними, коли на карті з'явиться більше відкритих островів).</i></p>
+<p style="text-align: justify;">
 
-<p>
-    Це третя місія серії, і це єдина, де тобі потрібно повертати не підрядок, а довжину підрядка. Тобі потрібно знайти
-    підрядок, який повторюється більше одного разу в даному рядку. Це повторення не повинно збігатися. Наприклад,
-    у рядку "abcab" найдовшим підрядком, який повторюється більше одного разу, є "ab", тому відповідь має бути 2 (довжина "ab")
+    Це третя місія серії, і вона єдина, де вам потрібно повернути не підрядок, а довжину підрядка. Вам потрібно знайти підрядок, який повторюється більше одного разу у заданому рядку. Ці повторення не повинні мати збігів. Наприклад, у рядку "abcab" найдовший підрядок, який повторюється більше одного разу - це "ab", тому відповідь має бути 2 (довжина "ab")
 </p>
 
 
 <p>
-    <strong>Вхідні дані: </strong> Рядок.
-
+   <strong>Вхідні дані:</strong> Рядок <span>(str{% if is_js %}ing{% endif %})</span>.
 <p>
-    <strong>Вихідні дані: </strong> Ціле число.
+
+   <strong>Вихідні</strong> дані: Ціле число <span>({% if is_js %}number{% else %}int{% endif %})</span>.</p><p>
 </p>
 
 <p style="text-align: center;">
