UPDATE - Auto translation uk (v1)

--- a/translations/uk/info/task_short_description.html
+++ b/translations/uk/info/task_short_description.html
@@ -1,1 +1,1 @@
-Знайди довжину найдовшого підрядка, який повторюється більше одного разу.
+Знайти довжину найдовшого підрядка, який повторюється більше одного разу
