--- a/translations/uk/hints/doppelok.html
+++ b/translations/uk/hints/doppelok.html
@@ -1,29 +1,28 @@
 <body data-author="Doppelok">
 <div class="question-answer">
     <div class="question">
-        Я не знаю, як розпочати вирішення цієї місії
+        Я не знаю, як почати вирішувати цю місію
     </div>
     <div class="answer">
-        Ідея в тому, що потрібно пройтись по рядку і визначити які елементи та підрядки зустрічаються більше одного разу в рядку.
-        Визначити довжини таких елементів та підрядків і повернути найбільшу з них.
+        <p>Ідея полягає у тому, щоб пройтись по рядку і визначити, які елементи або підрядки зустрічаються у ньому більше одного разу. Визначити довжину таких елементів або підрядків і повернути найбільший з них.</p>
     </div>
 </div>
 <div class="question-answer">
     <div class="question">
-        Мені потрібна допомога, щоб продовжити місію
+        Мені потрібна допомога для продовження місії
     </div>
     <div class="answer">
-        Тобі буде корисно прочитати трохи інформації про:
-        <a href='https://docs.python.org/3.10/library/stdtypes.html?highlight=count#str.count'>str.count()</a>
-        (<a href='https://www.w3schools.com/python/ref_string_count.asp'>приклад</a> ),
-        <a href='https://docs.python.org/3/tutorial/datastructures.html'>list.append()</a>
-        (<a href='https://www.w3schools.com/python/ref_list_append.asp'>приклад</a> ), та
-        <a href='https://docs.python.org/3/library/functions.html?highlight=len#len'>len()</a>
-        (<a href='https://www.w3schools.com/python/ref_func_len.asp'>приклад</a> ),
-        (<a href='https://docs.python.org/3.10/library/functions.html?highlight=max#max'>max()</a> ),
-        (<a href='https://www.w3schools.com/python/ref_func_max.asp'>приклад</a> ),
-        (<a href='https://docs.python.org/3.10/library/stdtypes.html?highlight=range#range'>range()</a> ),
-        (<a href='https://www.w3schools.com/python/ref_func_range.asp'>приклад</a> ).
+        <p>Вам буде корисно прочитати деяку інформацію про:
+       <a target="_blank" href='https://docs.python.org/3.10/library/stdtypes.html?highlight=count#str.count'>str.count()</a>
+        (<a target="_blank" href='https://www.w3schools.com/python/ref_string_count.asp'>example</a>),
+       <a target="_blank" href='https://docs.python.org/3/tutorial/datastructures.html'>list.append()</a>
+        (<a target="_blank" href='https://www.w3schools.com/python/ref_list_append.asp'>example</a>),
+       <a target="_blank" href='https://docs.python.org/3/library/functions.html?highlight=len#len'>len()</a>
+        (<a target="_blank" href='https://www.w3schools.com/python/ref_func_len.asp'>example</a>),
+       <a target="_blank" href='https://docs.python.org/3.10/library/functions.html?highlight=max#max'>max()</a>
+        (<a target="_blank" href='https://www.w3schools.com/python/ref_func_max.asp'>example</a>) та
+       <a target="_blank" href='https://docs.python.org/3.10/library/stdtypes.html?highlight=range#range'>range()</a>
+        (<a target="_blank" href='https://www.w3schools.com/python/ref_func_range.asp'>example</a>).</p>
     </div>
 </div>
 <div class="question-answer">
@@ -31,34 +30,36 @@
         Потрібна допомога!
     </div>
     <div class="answer">
-        Давай почнемо з того, що розберемося як нам сформувати різні підрядки з елементів які ідуть поруч. Використаємо
-        для цього два цикли for та додаткову змінну num.
+        <p>Почнемо з того, що з'ясуємо, як формувати різні підрядки з елементів, що стоять поруч.
+        Для цього використаємо два цикли for та додаткову змінну num.</p>
         <pre class="brush: python">
 line = "aaaa"
 num = 1
-for a in range(len(line)):  # В цьому циклі ми визначаємо на скільки буде
-            # змінюватись довжина підрядка за один цикл по заданому рядку
-    for i in range(len(line)):  # В цьому циклі ми визначаємо самі підрядки
-        substring = line[i:i+num]  # Підрядок формується цим виразом
+for a in range(len(line)):  # In this cycle, we determine how much the length
+            # of the substring will change in one cycle on the given line
+    for i in range(len(line)):  # In this cycle, we define the substrings themselves
+        substring = line[i:i+num]  # A substring is formed by this expression
         print(substring)
-    num += 1  # Ця змінна буде зростати на 1 після кожного циклу
-            # Саме вона буде визначати довжину підрядка
-
-# output
-a
-a
-a
-a
-aa
-aa
-aa
-a
-aaa
-aaa
-...
-...
+    num += 1  # This variable will increase by 1 after each cycle
+            # and it will determine the length of the substring
         </pre>
-        Результат весь не показую задля економії місця. Спробуй у редакторі Python цей код.
+        <div class="output">
+            <p>Виведіть результат:</p>
+            <pre>
+a
+a
+a
+a
+aa
+aa
+aa
+a
+aaa
+aaa
+...
+...</pre>
+        </div>
+        <p>Я не показую весь результат для економії місця. Спробуйте цей код в редакторі Python.</p>
     </div>
 </div>
 <div class="question-answer">
@@ -66,49 +67,49 @@ aaa
         Що робити далі?
     </div>
     <div class="answer">
-        Далі потрібно все це пропустити через умову if. Нас цікавлять підрядки яких більше одного в рядку.
-        Використаємо str.count() як умову.
+        <p>Далі потрібно пропустити все це через умову if. Нас цікавлять підрядки, яких більше одного в рядку.
+         Використаємо str.count() як умову.</p>
         <pre class="brush: python">
 line = "aaaa"
 num = 1
 for a in range(len(line)):
     for i in range(len(line)):
-        if line.count(line[i:i+num]) > 1:
+        if line.count(line[i:i+num])> 1:
             substring = line[i:i+num]
             print(substring)
     num += 1
-
-# output
-a
-a
-a
-a
-aa
-aa
-aa
-a
-aa
-a
-...
-...
         </pre>
-        Як бачиш, наш результат змінився. Зникли підрядки які містили три символи і більше, адже вони зустрічаються лише
-        раз у рядку "аааа".
+        <div class="output">
+            <p>Виведення:</p>
+            <pre>
+a
+a
+a
+a
+aa
+aa
+aa
+a
+aa
+a
+...
+...</pre>
+        </div>
+        <p>Як бачите, наш результат змінився. Підрядки, що містять три і більше символів, зникли, тому що вони зустрічаються лише один раз у рядку "aaaa".</p>
     </div>
 </div>
 <div class="question-answer">
     <div class="question">
-        Я застряг. Мені потрібна маленька підказка.
+        Я застряг. Мені потрібна невелика підказка.
     </div>
     <div class="answer">
-        Залишилось не так багато речей, які потрібно зробити. Тобі потрібно тепер створити список де ти зможеш зберігати
-        довжини підрядків які зустрічаються більше одного разу у рядку. Використай для цього метод list.append().
+        <p>Залишилося зробити не так вже й багато. Тепер вам потрібно створити список, в якому ви зможете зберігати довжини підрядків, що зустрічаються більше одного разу підряд. Використовуйте для цього метод list.append().</p>
         <pre class="brush: python">
 num = 1
 result = []
 for a in range(len(line)):
     for i in range(len(line)):
-        if line.count(line[i:i+num]) > 1:
+        if line.count(line[i:i+num])> 1:
             result.append(len(line[i:i+num]))
     num += 1
         </pre>
@@ -116,39 +117,44 @@ for a in range(len(line)):
 </div>
 <div class="question-answer">
     <div class="question">
-        Як мені повернути правильну відповідь?
+        Як повернути правильну відповідь?
     </div>
     <div class="answer">
-        Обгорни все у вираз функції та скористайся функцією max(). В якості аргументу default постав 0, це для того, що якщо рядок буде порожній, то
-        наша функція поверне 0.
+        <p>Загорніть все у функціональний вираз і використовуйте функцію max(). аргументом за замовчуванням було встановлено 0, так що якщо рядок порожній, наша функція поверне 0.</p>
+        <div class="spoiler">
         <pre class="brush: python">
-def double_substring(line: sting) -> int:
+def double_substring(line: str) -> int:
+
     num = 1
     result = []
     for a in range(len(line)):
         for i in range(len(line)):
-            if line.count(line[i:i+num]) > 1:
+            if line.count(line[i:i+num])> 1:
                 result.append(len(line[i:i+num]))
         num += 1
     return max(result, default=0)
         </pre>
+        </div>
     </div>
 </div>
 <div class="question-answer">
     <div class="question">
-        Я хочу бути кращим з кращих ПРОГРАМІСТІВ!!! ПОКАЗАЖИ МЕНІ БІЛЬШЕ РІШЕНЬ!!1!!!11!
+        Я хочу бути кращим з кращих програмістів!!! ПОКАЖІТЬ МЕНІ БІЛЬШЕ РІШЕНЬ!!!1!!!11!
     </div>
     <div class="answer">
-        Добре, добре! Оце настрій!=)
-        Це рішення буде важкувато зрозуміти. Тут використовують модуль
-        <a href='https://docs.python.org/3.10/library/re.html'>"re"</a> . За допомогою виразу "re.findall(r'(?=(.*).*\1)', line)"
-        та функції len() ми з легкістю отримаємо бажаний результат.
+        <p>Гаразд, гаразд! Ось це настрій!)
+        Цей розв'язок буде складним для розуміння. Тут використовується модуль
+        <a target="_blank" href='https://docs.python.org/3.10/library/re.html'>"re"</a> тут використовується модуль За допомогою виразу "re.findall(r'(?=(.*).*\1)', line)" і функції len() ми легко отримаємо потрібний результат.</p>
+        <div class="spoiler">
         <pre class="brush: python">
 import re
 
-def double_substring(line: sting) -> int:
+
+def double_substring(line: str) -> int:
+
     return max(map(len, re.findall(r'(?=(.*).*\1)', line)))
         </pre>
+    </div>
     </div>
 </div>
 <div class="question-answer">
@@ -156,11 +162,11 @@ def double_substring(line: sting) -> int:
         Я хочу більше!
     </div>
     <div class="answer">
-        Подивись на цей розв'язок. Побудований на циклі while та перевірках підрядків.
-        Логіка дещо схожа до нашого рішення, цикл while завершиться коли підрядок буде довжиною з цілий рядок.
-        Для повернення результату також використовується функція max().
+        <p>Подивіться на це рішення. Побудовано на циклі while і перевірці підрядків. Логіка дещо схожа на наш розв'язок, цикл while завершиться, коли підрядок стане довжиною у цілий рядок. Для повернення результату також використовується функція max().</p>
+        <div class="spoiler">
         <pre class="brush: python">
-def double_substring(line: sting) -> int:
+def double_substring(line: str) -> int:
+
     res = 0
     x = 1
     while x <= len(line):
@@ -172,7 +178,6 @@ def double_substring(line: sting) -> int:
     return res
         </pre>
     </div>
+    </div>
 </div>
-
-
 </body>
